# VKR

client/: CMakeLists.txt  client.cpp
directory/: directory.cpp  directory.h
interface/: interface.cpp  interface.h
message/: message.cpp  message.h
messagePack/: messagePack.cpp  messagePack.h
messageUnPack/: messageUnPack.cpp  messageUnPack.h
server/: CMakeLists.txt  server.cpp
socket/: socket.cpp  socket.h
socketAddress/: socketAddress.cpp  socketAddress.h
socketException/: socketException.cpp  socketException.h
socketTcp/: socketTCP.cpp  socketTCP.h
socketTcpServer/: socketTcpServer.cpp  socketTcpServer.h
socketUdp/: socketUDP.cpp  socketUDP.h
socketUdpServer/: socketUDPServer.cpp  socketUDPServer.h
test/: CMakeLists.txt  test.cpp
transferFiles/: transferFiles.cpp  transferFiles.h
